tree-sitter-exa/test/corpus/test.txt
====
test
====

TEST m > f
Test T < #DATA
test x = -190
tEST #Page < t
test #NERV = #DIAL
tESt #PAGE > -1257
tesT -90 < F
teSt -602 = #Data
teSt -693 > -967
tesT EOF
teSt EOF
tEsT eof
TesT mrd
TesT mrd
TEst MRD

---

(exa
    (test
        (register
            (m))
        (binary_operator)
        (register
            (f)))
    (test
        (register
            (t))
        (binary_operator)
        (register
            (hardware)))
    (test
        (register
            (x))
        (binary_operator)
        (number))
    (test
        (register
            (hardware))
        (binary_operator)
        (register
            (t)))
    (test
        (register
            (hardware))
        (binary_operator)
        (register
            (hardware)))
    (test
        (register
            (hardware))
        (binary_operator)
        (number))
    (test
        (number)
        (binary_operator)
        (register
            (f)))
    (test
        (number)
        (binary_operator)
        (register
            (hardware)))
    (test
        (number)
        (binary_operator)
        (number))
    (test
        (eof))
    (test
        (eof))
    (test
        (eof))
    (test
        (mrd))
    (test
        (mrd))
    (test
        (mrd)))
